--- a/index.css
+++ b/index.css
@@ -18,7 +18,11 @@ body {
 }
 
 .scoreboard {
-  width : 500px; height : 300px; background-image : url('data/img/scoreboard.png');
+  background-image : url('data/img/scoreboard.png');
+  background-size : auto;
+  background-repeat: no-repeat;
+  
+  margin: auto;
 }
 
 #screen canvas {
